--- a/package.json
+++ b/package.json
@@ -2,12 +2,19 @@
     "private": true,
     "type": "module",
     "scripts": {
+        "serve": "php artisan serve",
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",  
+        "start": "npm-run-all --parallel build serve"
+
     },
     "devDependencies": {
+        "@popperjs/core": "^2.11.6",
         "axios": "^1.7.4",
+        "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^1.0",
+        "npm-run-all": "^4.1.5",
+        "sass": "^1.56.1",
         "vite": "^5.0"
     }
 }
