--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
     "scripts": {
         "serve": "php artisan serve",
         "dev": "vite",
-        "build": "vite build",  
+        "build": "vite build",
         "start": "npm-run-all --parallel build serve"
-
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
         "axios": "^1.7.4",
         "bootstrap": "^5.2.3",
+        "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
         "npm-run-all": "^4.1.5",
         "sass": "^1.56.1",
