--- a/package.json
+++ b/package.json
@@ -2,19 +2,18 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "serve": "php artisan serve",
         "dev": "vite",
         "build": "vite build",
-        "start": "npm-run-all --parallel build serve"
+        "serve": "php artisan serve",
+        "start": "concurrently \"npm run dev\" \"npm run serve\""
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
         "axios": "^1.7.4",
         "bootstrap": "^5.2.3",
-        "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
-        "npm-run-all": "^4.1.5",
         "sass": "^1.56.1",
-        "vite": "^5.0"
+        "vite": "^5.0",
+        "concurrently": "^7.0.0"
     }
 }
